tests/error/equalsInteger-wrong-1st-argument-bytestring.uplc
(program 1.0.0[[(builtin equalsInteger)(con bytestring #AFD3)](con integer 10)])